# Line-Picker-Slint

./: Cargo.toml  README.md  file.txt
src/: filemanager.rs  main.rs
ui/: appwindow.slint
